mobile text wrap fix

--- a/client/src/CustomTable.css
+++ b/client/src/CustomTable.css
@@ -8,6 +8,11 @@
     color: white;
     border: 0em;
     text-decoration: none;
+    white-space: pre-wrap;      /* CSS3 */   
+    white-space: -moz-pre-wrap; /* Firefox */    
+    white-space: -pre-wrap;     /* Opera <7 */   
+    white-space: -o-pre-wrap;   /* Opera 7 */    
+    word-wrap: break-word;      /* IE */ 
 }
 
 #customTable > thead > tr > th {
