--- a/client/src/Dashboard.css
+++ b/client/src/Dashboard.css
@@ -209,5 +209,5 @@ ol {
 }
 
 #betaAccessButton {
-    margin-top: 15px;
+    margin: 15px 0;
 }
